--- a/views/userTweets.ejs
+++ b/views/userTweets.ejs
@@ -9,7 +9,13 @@
 </head>
 <body>
   <main>
-    <a class="twitter-timeline" href="https://twitter.com/JessicaCarrillo" data-widget-id="593981208696086528">Tweets by @JessicaCarrillo</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-  </main>
+    <a class="twitter-timeline" 
+    href="https://twitter.com/JessicaCarrillo" 
+    data-widget-id="593981208696086528"
+    data-chrome="nofooter transparent">
+    Tweets by @JessicaCarrillo
+  </a> 
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+</main>
 </body>
 </html>
